--- a/src/css/application.sass
+++ b/src/css/application.sass
@@ -7,9 +7,29 @@ body
   margin: 0
   .title
     @extend .font-style
-    text-align: center
     font-size: 3em
     padding: 1em 0
+    position: relative
+    text-align: center
+    .login
+      position: absolute
+      top: 0
+      right: 0
+      padding: 5px
+      display: flex
+      justify-content: center
+      align-items: center
+      a
+        display: inline-block
+        font-size: 1rem
+        color: $black
+        padding: 0.3em 1em
+        text-decoration: none
+        @extend .trans
+        &:first-child
+          border-right: $black 1px solid
+        &:hover
+          color: $pink
   .sec_title
 
     p
@@ -40,6 +60,7 @@ body
 
     h1
       padding: 0
+      font-size: 1.7em
       margin: 0.5em 20px
       @extend .font-style
       &:first-letter
@@ -69,3 +90,21 @@ body
         border: 1px rgba(255,255,255,0.1) solid
         &:hover
           background-color: $pink
+.test
+  width: 100%
+  display: flex
+  justify-content: center
+  align-items: center
+  .test_ani
+    height: 15px
+    width: 15px
+    margin: 1em 0.3em
+    background: $pink
+    +animation(ifinityCircles 3s infinite linear)
+
+
++keyframes(ifinityCircles)
+  from
+    transform: rotate(0)
+  to
+    transform: rotate(360deg)
