--- a/src/css/application.sass
+++ b/src/css/application.sass
@@ -56,6 +56,7 @@ body
     width: calc(100% / 3)
     +padding(1em 4px,3,8px,8px)
     +animation(fadeInUp 2s ease)
+    +ani-delay(3,.3)
     animation-duration: 1s
     animation-fill-mode: both
     -webkit-animation-duration: 1s
@@ -107,7 +108,7 @@ body
     width: 15px
     margin: 1em 0.3em
     background: $pink
-    +animation(ifinityCircles 3s infinite linear)
+    +animation(ifinityCircles 2s infinite ease)
 
 
 +keyframes(ifinityCircles)
