--- a/src/css/application.sass
+++ b/src/css/application.sass
@@ -1,81 +1,9 @@
 @import 'vendor/normalize'
 @import 'vendor/mixin'
 @import 'vendor/base'
-.flex
-  display: flex
-  flex-wrap: wrap
-/*color
-.color-item
-  width: 2rem
-  height: 2rem
-  margin-right: 0.2em
-  display: inline-block
-  &:first-child
-    +bg($black)
-  &:nth-child(2)
-    +bg($dark)
-  &:nth-child(3)
-    +bg($success)
-  &:nth-child(4)
-    +bg($light)
-  &:nth-child(5)
-    +bg($warning)
-  &:nth-child(6)
-    +bg($danger)
-  &:nth-child(7)
-    +bg($light-2)
-  &:nth-child(8)
-    +bg($cancel)
-  &:nth-child(9)
-    +bg($border)
-  &:nth-child(10)
-    +bg($gray-bg)
-.color-item-l
-  width: 4.5rem
-  height: 2rem
-  margin-right: 0.2em
-  display: inline-block
-  &:first-child
-    +bg($black)
-  &:nth-child(2)
-    +bg($main)
-  &:nth-child(3)
-    +bg($danger)
+@import 'vendor/layout'
 
-/*panel
-.panel
-  border-radius: 3px
-  border: 1px $border solid
-  margin-bottom: 0.5rem
-  /*width*/
-  width: calc(100% / 3 - 0.4em)
-  margin-right: 0.2em
-  &:nth-child(3)
-    margin-right: 0
-.panel-title
-  font-size: $font-size-l
-  padding: 1rem 2rem 0
-.panel-text
-  padding: 1rem 2rem
-  font-size: $font-size-m
-.panel-text2
-  border-top: rgba(255,255,255,0.3) 1px solid
-  padding: 1rem 2rem
-  font-size: $font-size-s
-/*background
-.panel-warning
-  background-color: $warning
-  color: $white
-.panel-danger
-  background-color: $danger
-  color: $white
-.panel-main
-  background-color: $main
-  color: $white
-.panel-success
-  background-color: $success
-  color: $white
-.panel-defult
-  .panel-text2
-    border-top: $border 1px solid
+
+
 @import 'vendor/rwd'
+
