--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -3,38 +3,37 @@ html(lang="zh-tw" data-git=htmlWebpackPlugin.options.git data-rev=htmlWebpackPlu
   head
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    title --
+    title practice
   body
-    .wrapper
-      h1.title COLOR
-        .mainbox
-          - for(var x=0; x<10; x++)
-            .color-item
-        .mainbox
-           - for(var x=0; x<3; x++)
-            .color-item-l
-      h1.title PANEL
-        .mainbox.flex
-          .panel.panel-warning
-            .panel-title Title
-            .panel-text Text opiuf wjfihj wpvhiihvl iwepfi wnl.
-            .panel-text2 MORE
-          .panel.panel-danger
-            .panel-title Title
-            .panel-text Text opiuf wjfihj wpvhiihvl iwepfi wnl.
-            .panel-text2 MORE
-          .panel.panel-main
-            .panel-title Title
-            .panel-text Text opiuf wjfihj wpvhiihvl iwepfi wnl.
-            .panel-text2 MORE
-          .panel.panel-success
-            .panel-title Title
-            .panel-text Text opiuf wjfihj wpvhiihvl iwepfi wnl.
-            .panel-text2 MORE
-          .panel.panel-defult
-            .panel-title Title
-            .panel-text Text opiuf wjfihj wpvhiihvl iwepfi wnl.
-            .panel-text2 MORE
-          
-        
+    .header
+        .header-topBar
+          .topBar-time.topBar-text 2018/03/09 17:14:59
+          .topBar-menu
+            a.topBar-text.lanBox.topBar-position 語言切換
+              ul.lanList
+                li.lanItem English
+                li.lanItem 簡中
+                li.lanItem 한국어
+                li.lanItem 日本語
+            a.topBar-text.userName.topBar-position Jennifer_lin
+            a.topBar-text.userMoney.topBar-position BBIN 餘額： 0.24
+        .header-main
+          .header-logo
+          .header-version 傳統版
+          .header-menu
+            ul.menu-list
+              li.menu-item
+                a.menu-btn
+                ul.sec-menu-lst 公告
+                  li.sec-menu-item
+                    a.sec-menu-btn
+              li.menu-item
+                a.menu-btn
+                ul.sec-menu-lst 功能
+                  li.sec-menu-item
+                    a.sec-menu-btn
+              li.menu-item
+                a.menu-btn
+
+
 
