--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -18,22 +18,22 @@ html(lang="zh-tw" data-git=htmlWebpackPlugin.options.git data-rev=htmlWebpackPlu
             a.topBar-text.userName.topBar-position Jennifer_lin
             a.topBar-text.userMoney.topBar-position BBIN 餘額： 0.24
         .header-main
-          .header-logo
+          a.header-logo
           .header-version 傳統版
           .header-menu
             ul.menu-list
               li.menu-item
-                a.menu-btn
+                a.menu-btn.menu-message
                 ul.sec-menu-lst 公告
                   li.sec-menu-item
                     a.sec-menu-btn
               li.menu-item
-                a.menu-btn
+                a.menu-btn.menu-function
                 ul.sec-menu-lst 功能
                   li.sec-menu-item
                     a.sec-menu-btn
               li.menu-item
-                a.menu-btn
+                a.menu-btn.menu-game
 
 
 
