--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -34,6 +34,35 @@ html(lang="zh-tw" data-git=htmlWebpackPlugin.options.git data-rev=htmlWebpackPlu
                     a.sec-menu-btn
               li.menu-item
                 a.menu-btn.menu-game
+    .grid-mainContain
+      .sidebar
+        dl.sideBar-list
+          dt.sideBar-title.sideBar-title-open 即時開獎
+          dd.sideBar-detail 
+            a.sideBar-btn BB PK3 <span class="sideBar-time">00:02:20</span>
+          dd.sideBar-detail
+            a.sideBar-btn 江蘇快3 <span class="sideBar-time">00:02:20</span>
+          dd.sideBar-detail
+            a.sideBar-btn BB 競速快樂彩 <span class="sideBar-time">00:02:20</span>
+          dd.sideBar-detail
+            a.sideBar-btn BB3D <span class="sideBar-time">00:02:20</span>
+          dd.sideBar-detail 
+            a.sideBar-btn BB 雷電PK <span class="sideBar-time">00:02:20</span>
+        dl.sideBar-list  
+          dt.sideBar-title.sideBar-title-hot 熱門遊戲
+          dd.sideBar-detail 
+            a.sideBar-btn BB PK3 <span class="sideBar-time">00:02:20</span>
+          dd.sideBar-detail
+            a.sideBar-btn 江蘇快3 <span class="sideBar-time">00:02:20</span>
+          dd.sideBar-detail
+            a.sideBar-btn BB 競速快樂彩 <span class="sideBar-time">00:02:20</span>
+          dd.sideBar-detail
+            a.sideBar-btn BB3D <span class="sideBar-time">00:02:20</span>
+          dd.sideBar-detail 
+            a.sideBar-btn BB 雷電PK <span class="sideBar-time">00:02:20</span>
+        
+      .container
+
 
 
 
