--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -7,7 +7,7 @@ html(lang="zh-tw" data-git=htmlWebpackPlugin.options.git data-rev=htmlWebpackPlu
   body
     .header
         .header-topBar
-          .topBar-time.topBar-text 2018/03/09 17:14:59
+          #sysTime.topBar-time.topBar-text 2018/03/09 17:14:59
           .topBar-menu
             a.topBar-text.lanBox.topBar-position 語言切換
               ul.lanList
@@ -233,7 +233,7 @@ html(lang="zh-tw" data-git=htmlWebpackPlugin.options.git data-rev=htmlWebpackPlu
               input.orderTotal-inp.inp-defult
               span.orderTotal-title 投注數：
               b.orderTotal-amounts 0
-              buttom.btn.btn-warning.addCart <span class="addCart-icon"></span>添加至注單
+              botton.btn.btn-warning.addCart <span class="addCart-icon"></span>添加至注單
           .orderList-openBtn 注單
           .orderList
             .orderList-head
@@ -266,8 +266,8 @@ html(lang="zh-tw" data-git=htmlWebpackPlugin.options.git data-rev=htmlWebpackPlu
                   .orderItem-text.bets 1
                   .orderItem-text.amount 5
             .orderList-btnBox
-              buttom.orderList-btn.btn-defult.btn-spuare 機選
-              buttom.orderList-btn.btn-success.btn-spuare 我要追號
+              botton.orderList-btn.btn-defult.btn-spuare 機選
+              botton.orderList-btn.btn-success.btn-spuare 我要追號
             .followBox
               .tab-sBox
                 .tab-s.is-active 同倍追號
@@ -281,7 +281,7 @@ html(lang="zh-tw" data-git=htmlWebpackPlugin.options.git data-rev=htmlWebpackPlu
                     option 40期
                     option 50期
                     option 60期
-                  buttom.btn.btn-s.btn-success 生成追號計畫
+                  botton.btn.btn-s.btn-success 生成追號計畫
         .orderBet
           .orderBet-info
             button.orderBet-btn.btn.btn-main.is-active 追號詳情
