--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -4,7 +4,7 @@ html(lang="zh-tw" data-git=htmlWebpackPlugin.options.git data-rev=htmlWebpackPlu
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     title practice
-  body
+  body(onload="startTime()")
     .header
         .header-topBar
           #sysTime.topBar-time.topBar-text 
